--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <!-- Employee Tracker -->
 	<div class="container">
 		<div class="jumbotron">
-			<h1 class="text-center"> Train Timetable </h1>
-			<p class="text-center">A up to the minute listing of requested train times</p>
+			<h1 class="text-center"> Train Schedule </h1>
+			<p class="text-center">Up to minute Train updates</p>
 		</div>
 
 		<!-- Current Train database list -->
@@ -82,6 +82,20 @@
 
 
 
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDrn1g9zXJcS4WjTdeqpgQDU08eh_aCGB0",
+        authDomain: "first-project-aa6eb.firebaseapp.com",
+        databaseURL: "https://first-project-aa6eb.firebaseio.com",
+        projectId: "first-project-aa6eb",
+        storageBucket: "first-project-aa6eb.appspot.com",
+        messagingSenderId: "308038295428"
+      };
+      firebase.initializeApp(config);
+    </script>
+    
 <script src="assets/javascript/main.js"></script>
 </body>
 </html>
