--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  	<!-- my reference sheets -->
 <!--  	<link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
+	<script src="jquery-3.3.1.min.js"></script>
 
 </head>
 <body>
