--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 	<!-- Moment.js Reference -->
  	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+	
+	<!-- Jquery Reference -->
+	<script src="jquery-3.3.1.min.js"></script>
 
  	<!-- my reference sheets -->
 <!--  	<link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script src="jquery-3.3.1.min.js"></script>
+	
 
 </head>
 <body>
